<resources>
    <string name="app_name">AgriMart</string>
    <string name="categories">Danh mục sản phẩm</string>
    <string name="see_all">Xem thêm</string>
    <string name="top_selling">Bán chạy nhất</string>
    <string name="home">Trang chủ</string>
    <string name="profile">Tôi</string>
    <string name="order">Order</string>
    <string name="newsfeed">Tin mới</string>
    <string name="post">Đăng bài</string>
    <string name="cart">Giỏ hàng</string>
    <string name="ng_b_n">Đăng bán</string>
    <string name="cho">Chợ</string>
    <string name="search_hint">tim kiem san pham</string>
    <string name="search">Tìm kiếm sản phẩm</string>
    <string name="ng_nh_p">Đăng nhập</string>
    <string name="ch_a_c_t_i_kho_n"><u>Chưa có tài khoản?</u></string>
    <string name="m_t_kh_u">Mật khẩu</string>
    <string name="continue_with_google"> Đăng nhập bằng Google</string>
    <string name="dang_ky">Chưa có tài khoản? <b>Đăng ký</b></string>
    <string name="c_t_i_kho_n"><u>Đã có tài khoản?</u></string>
    <string name="ng_k_b_ng_s_i_n_tho_i">Đăng ký bằng số điện thoại</string>
    <string name="ng_k_b_ng_email">Đăng ký bằng email</string>
    <string name="qu_n_m_t_kh_u">Quên mật khẩu?</string>
    <string name="nh_p_email_ho_c_s_i_n_tho_i">Nhập email hoặc số điện thoại</string>
    <string name="sodienthoai">Số điện thoại</string>
    <string name="g_i_l_i"><u>Gửi lại</u></string>


    <!-- PostProduct -->
    <string name="nh_p_s_l_ng_c_n_b_n">Your desired text here</string>
    <string name="desc_vegetable">Rau củ quả</string>
    <string name="desc_fruit">Trái cây</string>
    <string name="desc_meat_eggs">Trứng, thịt</string>
    <string name="desc_milk">Sữa, bơ, phô mai</string>
    <string name="desc_sweets">Bánh kẹo</string>
    <string name="nh_s_n_ph_m_th_c_t">Ảnh sản phẩm thực tế</string>
    <string name="th_m_nh">Thêm ảnh</string>
    <string name="todo">TODO</string>
    <string name="t_n_s_n_ph_m">Tên sản phẩm</string>
    <string name="c_i_t_n_n_i_l_n_t_t_c_s_gi_p_ch_r_t_nhi_u_y">Cái tên nói lên tất cả sẽ giúp ích rất nhiều đấy</string>
    <string name="m_t_s_n_ph_m">Mô tả sản phẩm</string>
    <string name="m_t_o_n_v_n_m_t_y_s_gi_p_s_n_ph_m_c_a_b_n_b_n_d_h_n">Một đoạn văn mô tả đầy đủ sẽ giúp sản phẩm của bạn bán dễ hơn
    -Sản phẩm: Tên, số lượng, xuất xứ
    -Hạn sử dụng, cách bảo quản
    -Giá bán/đơn vị</string>
    <string name="ph_n_lo_i_s_n_ph_m">Phân loại sản phẩm</string>
    <string name="rau_c">Rau củ</string>
    <string name="tr_i_c_y">Trái cây</string>
    <string name="th_t_tr_ng">Thịt, Trứng</string>
    <string name="s_a_b_ph_mai">Sữa, bơ, phô mai</string>
    <string name="ng_t">Đồ ngọt</string>
    <string name="ti_p_t_c">Tiếp tục</string>
    <string name="gi_b_n">Giá bán</string>
    <string name="n_v">Đơn vị </string>
    <string name="hi_n_c">Hiện có</string>
    <string name="nh_p_gi_b_n">Nhập giá bán</string>
    <string name="nh_p_n_v_kg_ch_c_c_i">Nhập đơn vị (kg, chục, cái)</string>
    <string name="_200kg">200kg</string>
    <string name="s_u_ri_ng_lan_t_a">Sầu riêng lan tỏa</string>
    <string name="_20_ng_i_ang_h_i">20 người đang hỏi</string>
    <string name="dang_san_pham">ĐĂNG SẢN PHẨM</string>
    <string name="frash_fruits_vegetable"><![CDATA[Frash Fruits & Vegetable]]></string>
    <string name="add_cart">Thêm vào giỏ hàng</string>
    <string name="product_name">Tên sản phẩm</string>
    <string name="price">50.000đ</string>
    <string name="address">123 Lê Trọng Tấn, Quận Tân Phú, TP.HCM</string>
    <string name="description">Mô tả chi tiết</string>
    <string name="descriptions">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="user_review">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="my_cart">Giỏ hàng</string>
    <string name="notification_time">1 phút trước</string>
    <string name="notification_message">Khánh vừa đặt mua sản phẩm của bạn: Chuối nhà trồng...</string>
    <string name="cate">Gian hàng</string>
    <string name="t_m_theo_danh_m_c">Tìm theo danh mục</string>
    <string name="thong_bao">Thông báo</string>
    <string name="n_h_ng">Đơn hàng</string>
    <string name="_0">0</string>
    <string name="ch_l_y_h_ng">Chờ lấy hàng</string>
    <string name="n_h_y">Đơn hủy</string>
    <string name="tr_h_ng_ho_n_ti_n">Trả hàng/Hoàn tiền</string>

    <string-array name="filter_options">
        <item>Sort by Price</item>
        <item>Newest</item>
        <item>Oldest</item>
    </string-array>

    <style name="TabTextAppearance" parent="TextAppearance.Design.Tab">
        <item name="android:textSize">16sp</item>
        <item name="android:textColor">@color/black</item>
        <item name="android:textStyle">bold</item>
    </style>

    <string name="default_web_client_id">689266518488-dggpokj3cbc4t7hoa53j2vsa6vt59qi4.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>

    //facebook
    <string name="loginwithfacebook">Đăng nhập bằng Facebook</string>
    <string name="facebook_app_id">456355280794721</string>
    <string name="fb_login_protocol_scheme">fb456355280794721</string>
    <string name="facebook_client_token">fbc7722b3ad7a34dbf443766e81403c1</string>
    <string name="facebook_app_secret">239308944b7f4f13d8ed33f56b79c7cc</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="verify">Email xác nhận đã được gửi đến địa chỉ email của bạn. Vui lòng kiểm tra email và nhấn vào liên kết xác nhận để hoàn tất đăng ký.</string>
    <string name="new_product">Mới nhất</string>
    <string name="goi_y">Gợi ý cho bạn</string>
    <string name="no_reslut">Không tìm thấy sản phẩm với từ khoá đã nhập</string>
    <string name="tim_kiem">Tìm kiếm sản phẩm</string>
    <string name="store_name">Tên cửa hàng</string>
</resources>